# ModernInventory

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  PCH.h  README.md  tmp_API.h  tmp_Interfaces.h  tmp_SKSE.h  tmp_Stubs.h  tmp_Version.h  tmp_commonlibsse.cmake  tmp_copy.cpp  tmp_copy_nolf.cpp  vcpkg-configuration.json  vcpkg.C.dev.vcpkg.1.0.0.nupkg  vcpkg.json
cmake/: disable-tests.cmake
include/ModernInventory/: Config.h  D3D11Hook.h  Log.h  ModernInventory.h  OffscreenRT.h  Player3D.h  PreviewCamera.h  PreviewGraph.h  PreviewRenderer.h
resources/: config.json
src/: main.cpp
src/Hooks/: D3D11Hook.cpp
src/Systems/: Config.cpp  Log.cpp  Player3D.cpp  PreviewCamera.cpp  PreviewGraph.cpp  PreviewRenderer.cpp
src/game/: Preview3D.cpp  Preview3D.h
